--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -15,6 +15,11 @@
         text-decoration: none;
     }
 }
+.main-wrap {
+    margin: 0 auto;
+    padding: 20px;
+    // width: 1200px;
+}
 
 .desc {
     color: #000;
