--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -55,6 +55,10 @@
         margin: 0;
         line-height: 30px;
         font-size: 14px;
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
     }
 }
 
