--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -7,7 +7,7 @@
       	align-items: center;
         width: 100%;
         height: 300px;
-        background: #364d79 url('../image/banner.webp') right bottom no-repeat;
+        background: #364d79 url('../image/bg.png') right bottom no-repeat;
         background-size: cover;
         text-align: center;
         img {
@@ -59,6 +59,17 @@
             color: #fff;
             text-decoration: none;
         }
+    }
+}
+
+.loading-box {
+    .ant-spin-dot {
+        margin: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
     }
 }
 
