perf:新增部分图片

--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -88,6 +88,14 @@
         }
     }
 }
+
+.project-cases-box {
+    .case-item-img {
+        width: 240px;
+        height: 260px;
+    }
+}
+
 .main-wrap {
     margin: 0 auto;
     padding: 20px;
