--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,7 +1,3 @@
 .about-box {
-    h1 {
-        color: #069;
-        font-size: 30px;
-        text-transform: uppercase;
-    }
+    padding: 50px;
 }
