--- a/src/pages/project-cases/cases.scss
+++ b/src/pages/project-cases/cases.scss
@@ -1,7 +1,3 @@
-.about-box {
-    h1 {
-        color: #069;
-        font-size: 30px;
-        text-transform: uppercase;
-    }
+.main-wrap.project-cases-box {
+   padding: 200px 50px;
 }
