'perf:首页样式优化'

--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -12,3 +12,16 @@
         font-weight: bold;
     }
 }
+
+@media screen and (max-width:600px) {
+    .ant-layout-header {
+        padding: 0 10px;
+    }
+    .logo-desc {
+        display: none;
+    }
+    .top-box .link {
+        margin-right: 10px;
+        font-size: 14px;
+    }
+}
